--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "kherma",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "express": "4.17.1"
   }
 }
