--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "serve-favicon": "^2.5.0"
   }
 }
