--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "express": "4.17.1",
+    "express-handlebars": "3.1.0",
     "serve-favicon": "^2.5.0"
   }
 }
